--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
         "classnames": "^2.2.6",
         "event-stream": "^4.0.1",
         "intl": "^1.2.5",
-        "moment": "^2.24.0",
         "lodash.throttle": "^4.1.1",
+        "moment": "^2.24.0",
         "nav-frontend-alertstriper": "3.0.3",
         "nav-frontend-alertstriper-style": "2.0.2",
         "nav-frontend-chevron": "^1.0.9",
@@ -47,7 +47,7 @@
         "nav-frontend-lenker-style": "^0.2.24",
         "nav-frontend-lukknapp": "^1.0.23",
         "nav-frontend-lukknapp-style": "^0.2.21",
-        "nav-frontend-modal": "^1.0.30",
+        "nav-frontend-modal": "^1.0.31",
         "nav-frontend-modal-style": "^0.3.31",
         "nav-frontend-paneler": "^1.0.21",
         "nav-frontend-paneler-style": "^0.3.17",
@@ -57,6 +57,8 @@
         "nav-frontend-spinner-style": "^0.2.5",
         "nav-frontend-stegindikator": "0.0.36",
         "nav-frontend-stegindikator-style": "^1.0.25",
+        "nav-frontend-tabs": "0.0.36",
+        "nav-frontend-tabs-style": "0.0.22",
         "nav-frontend-typografi": "^2.0.16",
         "nav-frontend-typografi-style": "^1.0.17",
         "nav-frontend-veileder": "^2.0.13",
@@ -64,7 +66,7 @@
         "nav-frontend-veilederpanel": "^0.1.18",
         "nav-frontend-veilederpanel-style": "0.0.17",
         "prop-types": "^15.7.2",
-        "react": "^16.11.0",
+        "react": "^16.12.0",
         "react-app-polyfill": "^0.2.1",
         "react-collapse": "^4.0.3",
         "react-copy-to-clipboard": "^5.0.1",
