--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
         "@types/classnames": "^2.2.7",
         "@types/enzyme": "^3.10.3",
         "@types/enzyme-adapter-react-16": "^1.0.5",
+        "@types/enzyme-react-intl": "^2.0.0",
         "@types/fetch-mock": "^7.2.2",
         "@types/jest": "^23.3.14",
         "@types/node": "^10.17.4",
@@ -104,6 +105,7 @@
         "cross-env": "^6.0.2",
         "enzyme": "^3.10.0",
         "enzyme-adapter-react-16": "^1.15.1",
+        "enzyme-react-intl": "^2.0.6",
         "fetch-mock": "^7.7.3",
         "glob": "^7.1.5",
         "http-proxy-middleware": "^0.19.1",
