--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
                       - ~/usr/local/lib/node_modules # location depends on npm version
                   key: node-v1-{{ .Branch }}-{{ checksum "package-lock.json" }}
             - setup_remote_docker:
-                  docker_layer_caching: true
+                  docker_layer_caching: false
             - run:
                   name: Bygger Docker image
                   command: docker build -t "navikt/tiltaksgjennomforing:$CIRCLE_SHA1" .
