--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
         "react-modal": "^3.11.1",
         "react-motion": "^0.5.2",
         "react-responsive": "^6.1.1",
-        "react-router-dom": "^5.1.2"
+        "react-router-dom": "^5.1.2",
+        "url-search-params-polyfill": "^7.0.1"
     },
     "devDependencies": {
         "@craco/craco": "^5.6.1",
