--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "react": "^16.12.0",
         "react-app-polyfill": "^0.2.1",
         "react-collapse": "^4.0.3",
+        "react-cookie": "^4.0.3",
         "react-copy-to-clipboard": "^5.0.1",
         "react-day-picker": "^7.4.0",
         "react-dom": "^16.11.0",
