--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "build": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') craco build",
         "mock": "cross-env REACT_APP_MOCK=true npm start",
+        "heroku": "node heroku.js",
         "server": "node server.js",
         "start": "craco start",
         "test": "cross-env CI=true craco test -w 1",
