--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "babel-runtime": "^6.26.0",
         "classnames": "^2.2.6",
         "event-stream": "^4.0.1",
+        "express": "^4.17.1",
         "intl": "^1.2.5",
         "lodash.throttle": "^4.1.1",
         "moment": "^2.24.0",
