--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "build": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') craco build",
         "mock": "cross-env REACT_APP_MOCK=true npm start",
+        "heroku": "node heroku.js",
         "server": "node server.js",
         "start": "craco start",
         "test": "cross-env CI=true craco test -w 1",
@@ -21,6 +22,7 @@
         "babel-runtime": "^6.26.0",
         "classnames": "^2.2.6",
         "event-stream": "^4.0.1",
+        "express": "^4.17.1",
         "intl": "^1.2.5",
         "lodash.throttle": "^4.1.1",
         "moment": "^2.24.0",
