--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -28,3 +28,5 @@ spec:
           value: '{{{selvbetjening-login-url}}}'
         - name: LOGOUT_URL
           value: '{{{logout-url}}}'
+        - name: ENABLE_EXTERNAL_MENU
+          value: '{{{enable-external-menu}}}'
