--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "heroku": "node heroku.js",
         "server": "node server.js",
         "start": "craco start",
+        "start-ekstern": "cross-env ENABLE_EXTERNAL_MENU=\"true\" craco start",
         "test": "cross-env CI=true craco test -w 1",
         "test:config": "node -e 'console.dir(require(\"./jest.config.js\"))'",
         "test:help": "craco test --help",
@@ -21,8 +22,10 @@
         "babel-polyfill": "^6.26.0",
         "babel-runtime": "^6.26.0",
         "classnames": "^2.2.6",
+        "craco-interpolate-html-plugin": "0.0.4",
         "event-stream": "^4.0.1",
         "express": "^4.17.1",
+        "html-webpack-plugin": "^3.2.0",
         "intl": "^1.2.5",
         "lodash.throttle": "^4.1.1",
         "moment": "^2.24.0",
@@ -106,7 +109,7 @@
         "@types/react-router-dom": "^5.1.2",
         "chai": "^4.2.0",
         "craco-less": "^1.14.4",
-        "cross-env": "^6.0.2",
+        "cross-env": "^6.0.3",
         "enzyme": "^3.10.0",
         "enzyme-adapter-react-16": "^1.15.1",
         "enzyme-react-intl": "^2.0.6",
