--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -30,3 +30,5 @@ spec:
           value: '{{{logout-url}}}'
         - name: ENABLE_EXTERNAL_MENU
           value: '{{{enable-external-menu}}}'
+        - name: DECORATOR_EXTERNAL_URL
+              value: '{{{decorator-external-url}}}'
