--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "up": "docker-compose up -d --remove-orphans --build"
     },
     "dependencies": {
+        "@navikt/fnrvalidator": "^1.1.0",
         "@sentry/browser": "^5.7.1",
         "@types/amplitude-js": "^4.4.4",
         "amplitude-js": "^5.6.0",
@@ -46,7 +47,7 @@
         "nav-frontend-knapper-style": "^0.3.32",
         "nav-frontend-lenkepanel": "^1.0.34",
         "nav-frontend-lenkepanel-style": "^0.3.27",
-        "nav-frontend-lenker": "^1.0.32",
+        "nav-frontend-lenker": "^1.0.33",
         "nav-frontend-lenker-style": "^0.2.24",
         "nav-frontend-lukknapp": "^1.0.23",
         "nav-frontend-lukknapp-style": "^0.2.21",
@@ -54,7 +55,7 @@
         "nav-frontend-modal-style": "^0.3.31",
         "nav-frontend-paneler": "^1.0.21",
         "nav-frontend-paneler-style": "^0.3.17",
-        "nav-frontend-skjema": "^1.0.77",
+        "nav-frontend-skjema": "^1.0.78",
         "nav-frontend-skjema-style": "^1.0.48",
         "nav-frontend-spinner": "^1.0.20",
         "nav-frontend-spinner-style": "^0.2.5",
