--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         "nav-frontend-veileder-style": "^2.0.10",
         "nav-frontend-veilederpanel": "^0.1.18",
         "nav-frontend-veilederpanel-style": "0.0.17",
+        "node-cache": "4.2.0",
         "prop-types": "^15.7.2",
         "react": "^16.12.0",
         "react-app-polyfill": "^0.2.1",
