--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "build": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') craco build",
         "mock": "cross-env REACT_APP_MOCK=true npm start",
         "heroku": "node heroku.js",
-        "server": "node server.js",
+        "server": "cross-env ENABLE_EXTERNAL_MENU=\"true\" node server.js",
         "start": "craco start",
         "start-ekstern": "cross-env ENABLE_EXTERNAL_MENU=\"true\" craco start",
         "test": "cross-env CI=true craco test -w 1",
@@ -22,9 +22,9 @@
         "babel-polyfill": "^6.26.0",
         "babel-runtime": "^6.26.0",
         "classnames": "^2.2.6",
-        "craco-interpolate-html-plugin": "0.0.4",
         "event-stream": "^4.0.1",
         "express": "^4.17.1",
+        "fs-extra": "^8.1.0",
         "html-webpack-plugin": "^3.2.0",
         "intl": "^1.2.5",
         "lodash.throttle": "^4.1.1",
