--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
         "build": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') craco build",
         "mock": "cross-env REACT_APP_MOCK=true npm start",
         "heroku": "node heroku.js",
-        "server": "cross-env ENABLE_EXTERNAL_MENU=\"true\" node server.js",
+        "server": "node server.js",
         "start": "craco start",
-        "start-ekstern": "cross-env ENABLE_EXTERNAL_MENU=\"true\" craco start",
+        "start-ekstern": "cross-env ENABLE_EXTERNAL_MENU=\"enable\" craco start",
         "test": "cross-env CI=true craco test -w 1",
         "test:config": "node -e 'console.dir(require(\"./jest.config.js\"))'",
         "test:help": "craco test --help",
