--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "up": "docker-compose up -d --remove-orphans --build"
     },
     "dependencies": {
+        "@navikt/fnrvalidator": "^1.1.0",
         "@sentry/browser": "^5.7.1",
         "@types/amplitude-js": "^4.4.4",
         "amplitude-js": "^5.6.0",
@@ -29,10 +30,10 @@
         "nav-frontend-alertstriper": "3.0.3",
         "nav-frontend-alertstriper-style": "2.0.2",
         "nav-frontend-chevron": "^1.0.9",
-        "nav-frontend-chevron-style": "^0.3.4",
+        "nav-frontend-chevron-style": "^0.3.5",
         "nav-frontend-core": "^4.0.11",
         "nav-frontend-ekspanderbartpanel": "^1.0.35",
-        "nav-frontend-ekspanderbartpanel-style": "^0.3.22",
+        "nav-frontend-ekspanderbartpanel-style": "^0.3.23",
         "nav-frontend-etiketter": "^1.0.28",
         "nav-frontend-etiketter-style": "^0.3.19",
         "nav-frontend-grid": "^1.0.23",
@@ -46,7 +47,7 @@
         "nav-frontend-knapper-style": "^0.3.32",
         "nav-frontend-lenkepanel": "^1.0.34",
         "nav-frontend-lenkepanel-style": "^0.3.27",
-        "nav-frontend-lenker": "^1.0.32",
+        "nav-frontend-lenker": "^1.0.33",
         "nav-frontend-lenker-style": "^0.2.24",
         "nav-frontend-lukknapp": "^1.0.23",
         "nav-frontend-lukknapp-style": "^0.2.21",
@@ -54,7 +55,7 @@
         "nav-frontend-modal-style": "^0.3.31",
         "nav-frontend-paneler": "^1.0.21",
         "nav-frontend-paneler-style": "^0.3.17",
-        "nav-frontend-skjema": "^1.0.77",
+        "nav-frontend-skjema": "^1.0.78",
         "nav-frontend-skjema-style": "^1.0.48",
         "nav-frontend-spinner": "^1.0.20",
         "nav-frontend-spinner-style": "^0.2.5",
@@ -62,16 +63,16 @@
         "nav-frontend-stegindikator-style": "^1.0.25",
         "nav-frontend-tabs": "0.0.36",
         "nav-frontend-tabs-style": "0.0.22",
-        "nav-frontend-typografi": "^2.0.16",
-        "nav-frontend-typografi-style": "^1.0.17",
+        "nav-frontend-typografi": "^2.0.17",
+        "nav-frontend-typografi-style": "^1.0.18",
         "nav-frontend-veileder": "^2.0.13",
         "nav-frontend-veileder-style": "^2.0.10",
         "nav-frontend-veilederpanel": "^0.1.18",
-        "nav-frontend-veilederpanel-style": "0.0.17",
+        "nav-frontend-veilederpanel-style": "^0.0.21",
         "prop-types": "^15.7.2",
         "react": "^16.12.0",
         "react-app-polyfill": "^0.2.1",
-        "react-collapse": "^4.0.3",
+        "react-collapse": "^5.0.1",
         "react-cookie": "^4.0.3",
         "react-copy-to-clipboard": "^5.0.1",
         "react-day-picker": "^7.4.0",
@@ -81,7 +82,7 @@
         "react-maskedinput": "^4.0.1",
         "react-modal": "^3.11.1",
         "react-motion": "^0.5.2",
-        "react-responsive": "^6.1.1",
+        "react-responsive": "^8.0.3",
         "react-router-dom": "^5.1.2",
         "url-search-params-polyfill": "^7.0.1"
     },
@@ -102,7 +103,7 @@
         "@types/react-dom": "^16.9.3",
         "@types/react-intl": "^2.3.16",
         "@types/react-maskedinput": "^4.0.4",
-        "@types/react-responsive": "^3.0.3",
+        "@types/react-responsive": "^8.0.2",
         "@types/react-router-dom": "^5.1.2",
         "chai": "^4.2.0",
         "craco-less": "^1.14.4",
