--- a/nais/nais-gcp-intern.yaml
+++ b/nais/nais-gcp-intern.yaml
@@ -21,9 +21,9 @@ spec:
     - name: APIGW_URL
       value: '{{{api-gw-url}}}'
     - name: LOGIN_URL
-      value: /tiltaksgjennomforing/oauth2/login
+      value: '{{{login-url}}}'
     - name: LOGOUT_URL
-      value: /oauth2/logout
+      value: '{{{logout-url}}}'
     - name: ENABLE_EXTERNAL_MENU
       value: 'true'
     - name: DECORATOR_EXTERNAL_URL
