--- a/.github/workflows/bygg-og-deploy-dev.yml
+++ b/.github/workflows/bygg-og-deploy-dev.yml
@@ -12,7 +12,7 @@ env:
 jobs:
   bygg:
     name: Bygg og deploy
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     steps:
       - name: Sjekk ut kode
         uses: actions/checkout@v2
@@ -21,7 +21,7 @@ jobs:
         run: yarn install
       - name: Server yarn build
         working-directory: ./server
-        run: yarn build
+        run: yarn run build
       - name: Frontend yarn install
         run: yarn install --frozen-lockfile
       - name: Kjør tester
@@ -38,7 +38,7 @@ jobs:
 
   deploy-dev-gcp-intern:
     name: Deploy til dev-gcp intern
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     needs: bygg
     steps:
       - name: Sjekk ut kode
@@ -54,7 +54,7 @@ jobs:
 
   deploy-dev-gcp-ekstern:
     name: Deploy til dev-gcp ekstern
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     needs: bygg
     steps:
       - name: Sjekk ut kode
@@ -70,7 +70,7 @@ jobs:
 
   deploy-labs-gcp:
     name: Deploy til labs-gcp
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     needs: bygg
     steps:
       - name: Sjekk ut kode
