--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@navikt/ds-icons": "^0.5.2",
         "@navikt/ds-react": "^2.4.2",
         "@navikt/fnrvalidator": "^1.1.4",
+        "@navikt/nav-dekoratoren-moduler": "^1.6.9",
         "@navikt/navspa": "^5.0.1",
         "@sentry/react": "^7.45.0",
         "@types/amplitude-js": "^8.0.1",
@@ -53,8 +54,8 @@
         "lodash.throttle": "^4.1.1",
         "moment": "^2.29.1",
         "node-cache": "5.1.2",
-        "node-fetch": "2.6.1",
-        "openid-client": "3.7.2",
+        "node-fetch": "^3.3.1",
+        "openid-client": "^5.4.0",
         "prop-types": "^15.7.2",
         "react": "^18.2.0",
         "react-app-polyfill": "^3.0.0",
@@ -74,15 +75,18 @@
     },
     "devDependencies": {
         "@craco/craco": "^7.1.0",
-        "@navikt/arbeidsgiver-notifikasjoner-brukerapi-mock": "^5.4.2",
+        "@navikt/arbeidsgiver-notifikasjoner-brukerapi-mock": "^5.4.8",
         "@sentry/cli": "^1.68.0",
         "@testing-library/jest-dom": "^5.15.1",
         "@testing-library/react": "^12.1.2",
         "@types/chai": "^4.2.21",
         "@types/classnames": "^2.3.0",
         "@types/enzyme": "^3.10.9",
+        "@types/express": "^4.17.17",
         "@types/fetch-mock": "^7.3.5",
+        "@types/fs-extra": "^11.0.1",
         "@types/jest": "^27.0.1",
+        "@types/jsdom": "^21.1.1",
         "@types/node": "^16.7.2",
         "@types/react": "^18.0.31",
         "@types/react-collapse": "^5.0.1",
@@ -112,7 +116,7 @@
         "tslint": "^5.20.1",
         "tslint-config-prettier": "^1.18.0",
         "tslint-react": "^4.1.0",
-        "typescript": "^5.0.2",
+        "typescript": "^5.0.4",
         "webpack-bundle-analyzer": "^4.4.2"
     },
     "browserslist": [
