--- a/package.json
+++ b/package.json
@@ -16,18 +16,6 @@
         "up": "docker-compose up -d --remove-orphans --build"
     },
     "dependencies": {
-        "@testing-library/jest-dom": "^5.14.1",
-        "@testing-library/react": "^13.0.0",
-        "@testing-library/user-event": "^13.2.1",
-        "@types/jest": "^27.0.1",
-        "@types/node": "^16.7.13",
-        "@types/react": "^18.0.0",
-        "@types/react-dom": "^18.0.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-scripts": "5.0.1",
-        "typescript": "^4.4.2",
-        "web-vitals": "^2.1.0",
         "@formatjs/intl-pluralrules": "^4.1.3",
         "@formatjs/intl-relativetimeformat": "^9.2.3",
         "@navikt/arbeidsgiver-notifikasjon-widget": "^5.4.2",
@@ -39,8 +27,15 @@
         "@navikt/nav-dekoratoren-moduler": "^1.6.9",
         "@navikt/navspa": "^5.0.1",
         "@sentry/react": "^7.45.0",
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^13.0.0",
+        "@testing-library/user-event": "^13.2.1",
         "@types/amplitude-js": "^8.0.1",
+        "@types/jest": "^27.0.1",
         "@types/lodash.debounce": "^4.0.6",
+        "@types/node": "^16.7.13",
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
         "@types/react-modal": "^3.12.1",
         "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
         "amplitude-js": "^8.5.0",
@@ -56,7 +51,7 @@
         "express-http-proxy": "1.6.2",
         "fs-extra": "^10.0.0",
         "helmet": "^4.6.0",
-        "html-webpack-plugin": "^5.3.2",
+        "html-webpack-plugin": "^5.5.1",
         "http-proxy-middleware": "^2.0.1",
         "intl": "^1.2.5",
         "jsdom": "^17.0.0",
@@ -69,19 +64,24 @@
         "node-fetch": "^3.3.1",
         "openid-client": "^5.4.0",
         "prop-types": "^15.7.2",
+        "react": "^18.2.0",
         "react-app-polyfill": "^3.0.0",
         "react-collapse": "^5.1.1",
         "react-cookie": "^4.1.1",
         "react-copy-to-clipboard": "^5.1.0",
         "react-day-picker": "^8.6.0",
+        "react-dom": "^18.2.0",
         "react-intl": "^6.3.2",
         "react-loading-skeleton": "^3.2.0",
         "react-modal": "^3.16.1",
         "react-responsive": "^9.0.2",
         "react-router-dom": "^6.10.0",
+        "react-scripts": "5.0.1",
         "react-select": "^5.7.2",
         "swr": "^1.1.1",
-        "url-search-params-polyfill": "^8.1.1"
+        "typescript": "^4.4.2",
+        "url-search-params-polyfill": "^8.1.1",
+        "web-vitals": "^2.1.0"
     },
     "devDependencies": {
         "@craco/craco": "^7.1.0",
