--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "scripts": {
         "build": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') craco build",
         "release": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') node sentry.js",
-        "server": "node server.js --openssl-legacy-provider ",
-        "start": "craco start --openssl-legacy-provider ",
+        "start": "craco start",
         "start-ekstern": "cross-env ENABLE_EXTERNAL_MENU=true craco start",
         "start-intern": "cross-env process.env.ENABLE_INTERNAL_MENU=true craco start",
         "test": "cross-env CI=true craco test -w 1",
@@ -18,25 +17,17 @@
     "dependencies": {
         "@formatjs/intl-pluralrules": "^4.1.3",
         "@formatjs/intl-relativetimeformat": "^9.2.3",
-        "@navikt/arbeidsgiver-notifikasjon-widget": "^5.4.2",
+        "@navikt/arbeidsgiver-notifikasjon-widget": "^5.4.8",
         "@navikt/bedriftsmeny": "^6.4.3",
         "@navikt/ds-css": "^2.4.2",
         "@navikt/ds-icons": "^0.5.2",
         "@navikt/ds-react": "^2.4.2",
-        "@navikt/fnrvalidator": "^1.1.4",
         "@navikt/nav-dekoratoren-moduler": "^1.6.9",
         "@navikt/navspa": "^5.0.1",
         "@sentry/react": "^7.45.0",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^13.0.0",
         "@testing-library/user-event": "^13.2.1",
-        "@types/amplitude-js": "^8.0.1",
-        "@types/jest": "^27.0.1",
-        "@types/lodash.debounce": "^4.0.6",
-        "@types/node": "^16.7.13",
-        "@types/react": "^18.0.0",
-        "@types/react-dom": "^18.0.0",
-        "@types/react-modal": "^3.12.1",
         "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
         "amplitude-js": "^8.5.0",
         "axios": "^0.21.1",
@@ -44,24 +35,20 @@
         "babel-polyfill": "^6.26.0",
         "babel-runtime": "^6.26.0",
         "classnames": "^2.3.1",
-        "dayjs": "^1.10.6",
         "event-stream": "^4.0.1",
         "express": "^4.17.1",
         "express-async-handler": "^1.2.0",
         "express-http-proxy": "1.6.2",
         "fs-extra": "^10.0.0",
         "helmet": "^4.6.0",
-        "html-webpack-plugin": "^5.5.1",
         "http-proxy-middleware": "^2.0.1",
         "intl": "^1.2.5",
-        "jsdom": "^17.0.0",
         "lodash.debounce": "^4.0.8",
         "lodash.isequal": "^4.5.0",
         "lodash.sortby": "^4.7.0",
         "lodash.throttle": "^4.1.1",
         "moment": "^2.29.1",
         "node-cache": "5.1.2",
-        "node-fetch": "^3.3.1",
         "openid-client": "^5.4.0",
         "prop-types": "^15.7.2",
         "react": "^18.2.0",
@@ -89,6 +76,7 @@
         "@sentry/cli": "^1.68.0",
         "@testing-library/jest-dom": "^5.15.1",
         "@testing-library/react": "^12.1.2",
+        "@types/amplitude-js": "^8.0.1",
         "@types/chai": "^4.2.21",
         "@types/classnames": "^2.3.0",
         "@types/enzyme": "^3.10.9",
@@ -96,8 +84,8 @@
         "@types/fetch-mock": "^7.3.5",
         "@types/fs-extra": "^11.0.1",
         "@types/jest": "^27.0.1",
-        "@types/jsdom": "^21.1.1",
-        "@types/node": "^16.7.2",
+        "@types/lodash.debounce": "^4.0.6",
+        "@types/node": "^16.7.13",
         "@types/react": "^18.0.31",
         "@types/react-collapse": "^5.0.1",
         "@types/react-copy-to-clipboard": "^5.0.4",
@@ -105,6 +93,7 @@
         "@types/react-dom": "^18.0.11",
         "@types/react-intl": "^3.0.0",
         "@types/react-maskedinput": "^4.0.6",
+        "@types/react-modal": "^3.12.1",
         "@types/react-responsive": "^8.0.5",
         "@types/react-router-dom": "^5.3.3",
         "chai": "^4.3.4",
@@ -127,7 +116,7 @@
         "tslint-config-prettier": "^1.18.0",
         "tslint-react": "^4.1.0",
         "typescript": "^5.0.4",
-        "webpack-bundle-analyzer": "^4.4.2"
+        "webpack-bundle-analyzer": "^4.8.0"
     },
     "browserslist": [
         ">0.2%",
