--- a/nais/dev-gcp-labs.yaml
+++ b/nais/dev-gcp-labs.yaml
@@ -49,7 +49,7 @@ spec:
       outbound:
         external:
           - host: https://tiltak-fakelogin.ekstern.dev.nav.no
+          - host: https://tiltak-stillingstitler.intern.dev.nav.no
         rules:
           - application: tiltaksgjennomforing-api-labs
-          - application: tiltak-stillingstitler
     {{/if}}
