--- a/nais/dev-gcp-labs.yaml
+++ b/nais/dev-gcp-labs.yaml
@@ -42,14 +42,12 @@ spec:
           value: '{{{decorator-external-script}}}'
         - name: DECORATOR_INTERNAL_STYLING
           value: '{{{decorator-external-styling}}}'
-        - name: STILLINGSTITLER_URL
-          value: '{{{stillingstitler-url}}}'
     {{#if labs}}
     accessPolicy:
       outbound:
         external:
           - host: https://tiltak-fakelogin.ekstern.dev.nav.no
-          - host: https://tiltak-stillingstitler.intern.dev.nav.no
         rules:
           - application: tiltaksgjennomforing-api-labs
+          - application: tiltak-stillingstitler
     {{/if}}
