--- a/nais/dev-gcp-labs.yaml
+++ b/nais/dev-gcp-labs.yaml
@@ -42,8 +42,6 @@ spec:
           value: '{{{decorator-external-script}}}'
         - name: DECORATOR_INTERNAL_STYLING
           value: '{{{decorator-external-styling}}}'
-        - name: STILLINGSTITLER_URL
-          value: '{{{stillingstitler-url}}}'
     {{#if labs}}
     accessPolicy:
       outbound:
@@ -51,4 +49,5 @@ spec:
           - host: https://tiltak-fakelogin.ekstern.dev.nav.no
         rules:
           - application: tiltaksgjennomforing-api-labs
+          - application: tiltak-stillingstitler
     {{/if}}
