--- a/.github/workflows/bygg-og-deploy-master.yml
+++ b/.github/workflows/bygg-og-deploy-master.yml
@@ -20,20 +20,31 @@ jobs:
     steps:
       - name: Sjekk ut kode
         uses: actions/checkout@v3
+      - name: Setup node.js
+        uses: actions/setup-node@v3
+        with:
+          registry-url: 'https://npm.pkg.github.com'
+      - name: Install
+        run: npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.READER_TOKEN }}
       - name: Server install
         working-directory: ./server
         run: npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.READER_TOKEN }}
+      - name: Kjør tester
+        run: npm run test
       - name: Server build
         working-directory: ./server
         run: npm run build
-      - name: Install
-        run: npm ci
-      - name: Kjør tester
-        run: npm run test
       - name: Build
         run: npm run build
       - name: Sentry release
         run: npm run release
+      - name: Remove source maps
+        run: |
+          rm dist/assets/*.map
       - name: Bygg, tag og push Docker-image
         run: |
           echo ${GITHUB_TOKEN} | docker login ghcr.io -u ${GITHUB_REPOSITORY} --password-stdin
