--- a/nais/nais-gcp-ekstern.yaml
+++ b/nais/nais-gcp-ekstern.yaml
@@ -60,6 +60,7 @@ spec:
           namespace: arbeidsgiver
         - application: notifikasjon-bruker-api
           namespace: fager
+        - application: nav-dekoratoren
+          namespace: personbruker
       external:
         - host: tiltak-proxy.{{{proxy-cluster}}}-pub.nais.io
-        - host: '{{{decorator-host}}}'
