--- a/nais/nais-gcp-intern.yaml
+++ b/nais/nais-gcp-intern.yaml
@@ -58,6 +58,7 @@ spec:
           cluster: '{{{proxy-cluster}}}'
         - application: tiltak-stillingstitler
           namespace: arbeidsgiver
+        - application: nav-dekoratoren
+          namespace: personbruker
       external:
         - host: tiltak-proxy.{{{proxy-cluster}}}-pub.nais.io
-        - host: '{{{decorator-host}}}'
