--- a/.github/workflows/bygg-og-deploy-master.yml
+++ b/.github/workflows/bygg-og-deploy-master.yml
@@ -44,7 +44,7 @@ jobs:
         run: npm run release
       - name: Remove source maps
         run: |
-          rm dist/assets/*.map
+          rm dist/client/assets/*.map
       - name: Bygg, tag og push Docker-image
         run: |
           echo ${GITHUB_TOKEN} | docker login ghcr.io -u ${GITHUB_REPOSITORY} --password-stdin
