--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
         "axios-retry": "^4.0.0",
         "classnames": "^2.5.1",
         "lodash.debounce": "^4.0.8",
+        "lodash.isequal": "^4.5.0",
+        "lodash.isnil": "^4.0.0",
+        "lodash.omit": "^4.5.0",
+        "lodash.pickby": "^4.6.0",
+        "lodash.sortby": "^4.7.0",
         "moment": "^2.30.1",
         "prop-types": "^15.7.2",
         "react": "^18.2.0",
@@ -49,6 +54,11 @@
         "@types/amplitude-js": "^8.16.5",
         "@types/classnames": "^2.3.0",
         "@types/lodash.debounce": "^4.0.9",
+        "@types/lodash.isequal": "^4.5.8",
+        "@types/lodash.isnil": "^4.0.9",
+        "@types/lodash.omit": "^4.5.9",
+        "@types/lodash.pickby": "^4.6.9",
+        "@types/lodash.sortby": "^4.7.9",
         "@types/node": "^20.11.17",
         "@types/react": "^18.2.55",
         "@types/react-collapse": "^5.0.4",
@@ -57,6 +67,7 @@
         "@types/react-router-dom": "^5.3.3",
         "@vitejs/plugin-react": "^4.2.1",
         "husky": "^9.0.10",
+        "jsdom": "^24.0.0",
         "less": "^4.2.0",
         "lint-staged": "^15.2.2",
         "prettier": "^3.2.5",
