--- a/server/package.json
+++ b/server/package.json
@@ -13,13 +13,13 @@
     "dependencies": {
         "@navikt/arbeidsgiver-notifikasjoner-brukerapi-mock": "^6.2.2",
         "@navikt/nav-dekoratoren-moduler": "^2.1.5",
+        "@navikt/oasis": "^3.2.2",
         "axios": "^1.6.7",
         "express-async-handler": "1.2.0",
         "express-http-proxy": "^2.0.0",
         "helmet": "^7.1.0",
         "http-proxy-middleware": "^2.0.1",
-        "jsdom": "^24.0.0",
-        "openid-client": "^5.4.0"
+        "jsdom": "^24.0.0"
     },
     "devDependencies": {
         "@types/express": "^4.17.17",
